# octograph

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  docker-compose.yml  energy_dashboard.json  energy_dashboard_flux.json  energy_dashboard_influxql.json  example-octograph.ini  octograph.example.ini  pyproject.toml
.github/workflows/: build.yaml  docker-publish.yml  dockerhub-description.yaml
app/: .dockerignore  Dockerfile  date_utils.py  eco_unit_normaliser.py  example-octograph.ini  octopus_api_client.py  octopus_to_influxdb.py  requirements.txt  series_maker.py  test_eco_unit_normaliser.py  test_normalise.py  test_series.py
grafana/lib/dashboards/: energy_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml  energy_dashboard_export.json  main.yaml
grafana/provisioning/datasources/: automatic.yaml  influxdb.yml
tests/: test_series_maker.py
