[tool.poetry]
name = "octograph"
version = "0.1.0"
description = "Automation to "
authors = ["Stephen Newey <github@s-n.me>", "Iain Rauch <6860163+Yanson@users.noreply.github.com>"]
license = "Unknown"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
influxdb-client = "^1.40.0"
click = "^8.1"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]
parameterized = "^0.9"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"